// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-kubernetes-automatic-readiness - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess Kubernetes workloads and cluster configuration for AKS Automatic compatibility. Identifies incompatibilities, generates fixes, and guides migration from AKS Standard to AKS Automatic. WHEN: migrate to AKS Automatic, check AKS Automatic readiness, validate manifests for Automatic, assess cluster for Automatic compatibility, fix deployment for Automatic compatibility, identify AKS Automatic migration blockers, is my cluster ready for AKS Automatic.",
  "extractedKeywords": [
    "aks",
    "assess",
    "automatic",
    "azure",
    "blockers",
    "check",
    "cli",
    "cluster",
    "compatibility",
    "configuration",
    "container",
    "deploy",
    "deployment",
    "diagnostic",
    "fixes",
    "from",
    "generates",
    "guides",
    "identifies",
    "identify",
    "incompatibilities",
    "kubernetes",
    "manifests",
    "mcp",
    "migrate",
    "migration",
    "monitor",
    "networking",
    "rbac",
    "readiness",
    "ready",
    "security",
    "standard",
    "storage",
    "validate",
    "validation",
    "when",
    "workloads",
  ],
  "name": "azure-kubernetes-automatic-readiness",
}
`;

exports[`azure-kubernetes-automatic-readiness - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "assess",
  "automatic",
  "azure",
  "blockers",
  "check",
  "cli",
  "cluster",
  "compatibility",
  "configuration",
  "container",
  "deploy",
  "deployment",
  "diagnostic",
  "fixes",
  "from",
  "generates",
  "guides",
  "identifies",
  "identify",
  "incompatibilities",
  "kubernetes",
  "manifests",
  "mcp",
  "migrate",
  "migration",
  "monitor",
  "networking",
  "rbac",
  "readiness",
  "ready",
  "security",
  "standard",
  "storage",
  "validate",
  "validation",
  "when",
  "workloads",
]
`;
